# Test

Aufgaben/: klausur-ws17.cabal
Aufgaben/src/: NTree.hs  Pad.hs  PadInf.hs  Positions.hs  SamePrefix.hs
Aufgaben/test/: Tests.hs
